fix missing checkbox image on firefox

--- a/css/enhancedsteam.css
+++ b/css/enhancedsteam.css
@@ -61,7 +61,7 @@
   display: inline-block;
   width: 14px;
   height: 14px;
-  background-image: url(/public/images/v6/customize_checkboxes.png);
+  background-image: url('https://steamstore-a.akamaihd.net/public/images/v6/customize_checkboxes.png');
   background-position: 0px 0px;
 }
 
